grammar/grammar_source/.antlr/CalcParser.java
// Generated from d:/programs/c++/UnProg/ANTLRParser/MPP/MaximPlusPlus/grammar/grammar_source/Calc.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CalcParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, IF=27, ELSE=28, WHILE=29, PRINT=30, RETURN=31, DEF=32, 
		LBRACK=33, RBRACK=34, TRUE=35, FALSE=36, TYPE=37, NAME=38, INTEGER=39, 
		FLOAT=40, WS=41, SEP=42, ONELINECOMMENT=43, MULLINECOMMENT=44;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_var_assignment = 2, RULE_typed_var_assignment = 3, 
		RULE_var_comp_assignment = 4, RULE_operator_if = 5, RULE_operator_while = 6, 
		RULE_funct_def = 7, RULE_func_call = 8, RULE_param = 9, RULE_param_list = 10, 
		RULE_args = 11, RULE_print_expression = 12, RULE_return_expression = 13, 
		RULE_code_block = 14, RULE_expr = 15, RULE_or_expr = 16, RULE_and_expr = 17, 
		RULE_equal_expr = 18, RULE_relational_expr = 19, RULE_addsub_expr = 20, 
		RULE_multdivmod_expr = 21, RULE_unary_expr = 22, RULE_value = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statement", "var_assignment", "typed_var_assignment", "var_comp_assignment", 
			"operator_if", "operator_while", "funct_def", "func_call", "param", "param_list", 
			"args", "print_expression", "return_expression", "code_block", "expr", 
			"or_expr", "and_expr", "equal_expr", "relational_expr", "addsub_expr", 
			"multdivmod_expr", "unary_expr", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'+='", "'-='", "'/='", "'*='", "'%='", "'('", "')'", "','", 
			"'{'", "'}'", "'or'", "'and'", "'=='", "'!='", "'<'", "'>'", "'<='", 
			"'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'if'", "'else'", 
			"'while'", "'print'", "'return'", "'def'", "'['", "']'", "'true'", "'false'", 
			null, null, null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "IF", "ELSE", "WHILE", "PRINT", "RETURN", "DEF", "LBRACK", 
			"RBRACK", "TRUE", "FALSE", "TYPE", "NAME", "INTEGER", "FLOAT", "WS", 
			"SEP", "ONELINECOMMENT", "MULLINECOMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Calc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CalcParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ProgContext {
		public TerminalNode EOF() { return getToken(CalcParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ProgContext ctx) { copyFrom(ctx); }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			_localctx = new ProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2172852895872L) != 0)) {
				{
				{
				setState(48);
				statement();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarCompoundAssignmentStatContext extends StatementContext {
		public Var_comp_assignmentContext var_comp_assignment() {
			return getRuleContext(Var_comp_assignmentContext.class,0);
		}
		public TerminalNode SEP() { return getToken(CalcParser.SEP, 0); }
		public VarCompoundAssignmentStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarAssignmentStatContext extends StatementContext {
		public Var_assignmentContext var_assignment() {
			return getRuleContext(Var_assignmentContext.class,0);
		}
		public TerminalNode SEP() { return getToken(CalcParser.SEP, 0); }
		public VarAssignmentStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionStatContext extends StatementContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEP() { return getToken(CalcParser.SEP, 0); }
		public ExpressionStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OperatorIfStatContext extends StatementContext {
		public Operator_ifContext operator_if() {
			return getRuleContext(Operator_ifContext.class,0);
		}
		public OperatorIfStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintExprStatContext extends StatementContext {
		public Print_expressionContext print_expression() {
			return getRuleContext(Print_expressionContext.class,0);
		}
		public TerminalNode SEP() { return getToken(CalcParser.SEP, 0); }
		public PrintExprStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypedVarAssignmentStatContext extends StatementContext {
		public Typed_var_assignmentContext typed_var_assignment() {
			return getRuleContext(Typed_var_assignmentContext.class,0);
		}
		public TerminalNode SEP() { return getToken(CalcParser.SEP, 0); }
		public TypedVarAssignmentStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefenitinStatContext extends StatementContext {
		public Funct_defContext funct_def() {
			return getRuleContext(Funct_defContext.class,0);
		}
		public FunctionDefenitinStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OperatorWhileStatContext extends StatementContext {
		public Operator_whileContext operator_while() {
			return getRuleContext(Operator_whileContext.class,0);
		}
		public OperatorWhileStatContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnExprStatContext extends StatementContext {
		public Return_expressionContext return_expression() {
			return getRuleContext(Return_expressionContext.class,0);
		}
		public TerminalNode SEP() { return getToken(CalcParser.SEP, 0); }
		public ReturnExprStatContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new VarAssignmentStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				var_assignment();
				setState(57);
				match(SEP);
				}
				break;
			case 2:
				_localctx = new TypedVarAssignmentStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				typed_var_assignment();
				setState(60);
				match(SEP);
				}
				break;
			case 3:
				_localctx = new VarCompoundAssignmentStatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				var_comp_assignment();
				setState(63);
				match(SEP);
				}
				break;
			case 4:
				_localctx = new ExpressionStatContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				expr();
				setState(66);
				match(SEP);
				}
				break;
			case 5:
				_localctx = new PrintExprStatContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				print_expression();
				setState(69);
				match(SEP);
				}
				break;
			case 6:
				_localctx = new ReturnExprStatContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				return_expression();
				setState(72);
				match(SEP);
				}
				break;
			case 7:
				_localctx = new FunctionDefenitinStatContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(74);
				funct_def();
				}
				break;
			case 8:
				_localctx = new OperatorIfStatContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(75);
				operator_if();
				}
				break;
			case 9:
				_localctx = new OperatorWhileStatContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(76);
				operator_while();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_assignmentContext extends ParserRuleContext {
		public Var_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assignment; }
	 
		public Var_assignmentContext() { }
		public void copyFrom(Var_assignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarAssignmentExpressionContext extends Var_assignmentContext {
		public TerminalNode NAME() { return getToken(CalcParser.NAME, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarAssignmentExpressionContext(Var_assignmentContext ctx) { copyFrom(ctx); }
	}

	public final Var_assignmentContext var_assignment() throws RecognitionException {
		Var_assignmentContext _localctx = new Var_assignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_assignment);
		try {
			_localctx = new VarAssignmentExpressionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(NAME);
			setState(80);
			match(T__0);
			setState(81);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Typed_var_assignmentContext extends ParserRuleContext {
		public Typed_var_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typed_var_assignment; }
	 
		public Typed_var_assignmentContext() { }
		public void copyFrom(Typed_var_assignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypedVarAssignmentExpressionContext extends Typed_var_assignmentContext {
		public TerminalNode TYPE() { return getToken(CalcParser.TYPE, 0); }
		public TerminalNode NAME() { return getToken(CalcParser.NAME, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypedVarAssignmentExpressionContext(Typed_var_assignmentContext ctx) { copyFrom(ctx); }
	}

	public final Typed_var_assignmentContext typed_var_assignment() throws RecognitionException {
		Typed_var_assignmentContext _localctx = new Typed_var_assignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typed_var_assignment);
		try {
			_localctx = new TypedVarAssignmentExpressionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(TYPE);
			setState(84);
			match(NAME);
			setState(85);
			match(T__0);
			setState(86);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_comp_assignmentContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(CalcParser.NAME, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Var_comp_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_comp_assignment; }
	}

	public final Var_comp_assignmentContext var_comp_assignment() throws RecognitionException {
		Var_comp_assignmentContext _localctx = new Var_comp_assignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_comp_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(NAME);
			setState(89);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 124L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(90);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Operator_ifContext extends ParserRuleContext {
		public Operator_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_if; }
	 
		public Operator_ifContext() { }
		public void copyFrom(Operator_ifContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OperatorIfContext extends Operator_ifContext {
		public TerminalNode IF() { return getToken(CalcParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<Code_blockContext> code_block() {
			return getRuleContexts(Code_blockContext.class);
		}
		public Code_blockContext code_block(int i) {
			return getRuleContext(Code_blockContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(CalcParser.ELSE, 0); }
		public OperatorIfContext(Operator_ifContext ctx) { copyFrom(ctx); }
	}

	public final Operator_ifContext operator_if() throws RecognitionException {
		Operator_ifContext _localctx = new Operator_ifContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_operator_if);
		int _la;
		try {
			_localctx = new OperatorIfContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(IF);
			setState(93);
			match(T__6);
			setState(94);
			expr();
			setState(95);
			match(T__7);
			setState(96);
			code_block();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(97);
				match(ELSE);
				setState(98);
				code_block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Operator_whileContext extends ParserRuleContext {
		public Operator_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_while; }
	 
		public Operator_whileContext() { }
		public void copyFrom(Operator_whileContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OperatorWhileContext extends Operator_whileContext {
		public TerminalNode WHILE() { return getToken(CalcParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public OperatorWhileContext(Operator_whileContext ctx) { copyFrom(ctx); }
	}

	public final Operator_whileContext operator_while() throws RecognitionException {
		Operator_whileContext _localctx = new Operator_whileContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_operator_while);
		try {
			_localctx = new OperatorWhileContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(WHILE);
			setState(102);
			match(T__6);
			setState(103);
			expr();
			setState(104);
			match(T__7);
			setState(105);
			code_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Funct_defContext extends ParserRuleContext {
		public Funct_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funct_def; }
	 
		public Funct_defContext() { }
		public void copyFrom(Funct_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefenitionContext extends Funct_defContext {
		public TerminalNode DEF() { return getToken(CalcParser.DEF, 0); }
		public TerminalNode NAME() { return getToken(CalcParser.NAME, 0); }
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public FunctionDefenitionContext(Funct_defContext ctx) { copyFrom(ctx); }
	}

	public final Funct_defContext funct_def() throws RecognitionException {
		Funct_defContext _localctx = new Funct_defContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funct_def);
		int _la;
		try {
			_localctx = new FunctionDefenitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(DEF);
			setState(108);
			match(NAME);
			setState(109);
			match(T__6);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(110);
				param_list();
				}
			}

			setState(113);
			match(T__7);
			setState(114);
			code_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_callContext extends ParserRuleContext {
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
	 
		public Func_callContext() { }
		public void copyFrom(Func_callContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionCallContext extends Func_callContext {
		public TerminalNode NAME() { return getToken(CalcParser.NAME, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public FunctionCallContext(Func_callContext ctx) { copyFrom(ctx); }
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func_call);
		int _la;
		try {
			_localctx = new FunctionCallContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(NAME);
			setState(117);
			match(T__6);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2027226660992L) != 0)) {
				{
				setState(118);
				args();
				}
			}

			setState(121);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(CalcParser.TYPE, 0); }
		public TerminalNode NAME() { return getToken(CalcParser.NAME, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(TYPE);
			setState(124);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Param_listContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list; }
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_param_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			param();
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(127);
				match(T__8);
				setState(128);
				param();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgsContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_args);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			expr();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(135);
				match(T__8);
				setState(136);
				expr();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print_expressionContext extends ParserRuleContext {
		public Print_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_expression; }
	 
		public Print_expressionContext() { }
		public void copyFrom(Print_expressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintExprContext extends Print_expressionContext {
		public TerminalNode PRINT() { return getToken(CalcParser.PRINT, 0); }
		public TerminalNode LBRACK() { return getToken(CalcParser.LBRACK, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(CalcParser.RBRACK, 0); }
		public PrintExprContext(Print_expressionContext ctx) { copyFrom(ctx); }
	}

	public final Print_expressionContext print_expression() throws RecognitionException {
		Print_expressionContext _localctx = new Print_expressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_print_expression);
		try {
			_localctx = new PrintExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(PRINT);
			setState(143);
			match(LBRACK);
			setState(144);
			expr();
			setState(145);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Return_expressionContext extends ParserRuleContext {
		public Return_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_expression; }
	 
		public Return_expressionContext() { }
		public void copyFrom(Return_expressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnExprContext extends Return_expressionContext {
		public TerminalNode RETURN() { return getToken(CalcParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnExprContext(Return_expressionContext ctx) { copyFrom(ctx); }
	}

	public final Return_expressionContext return_expression() throws RecognitionException {
		Return_expressionContext _localctx = new Return_expressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_return_expression);
		int _la;
		try {
			_localctx = new ReturnExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(RETURN);
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2027226660992L) != 0)) {
				{
				setState(148);
				expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
